--- a/app/src/main/res/layout-w600dp-land/activity_profile.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     app:tabMode="scrollable"
     tools:context=".controllers.ProfileActivity">
@@ -33,6 +34,7 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/activity_main_navigation_view"
         android:layout_width="wrap_content"
+        android:background="@color/white"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_gravity="start"
