--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/_4sdp"
     android:orientation="vertical"
     tools:context=".controllers.StatisticsFragment">
 
@@ -12,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/_4sdp"
         android:layout_marginBottom="4dp"
         android:text="@string/statistics"
         android:textSize="@dimen/_20sdp" />
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12sdp"
+        android:layout_marginStart="@dimen/_4sdp"
         android:text="@string/description_statistics" />
 
     <com.jjoe64.graphview.GraphView
