--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -93,15 +93,26 @@
                 android:layout_margin="@dimen/_8sdp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/description_exercise"
+                <TextSwitcher
+                    android:id="@+id/textSwitcher"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="@dimen/_24ssp"
+                     >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:textSize="@dimen/_16sdp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_16sdp"
+                    android:textStyle="bold"/>
+                </TextSwitcher>
 
                 <!--TIMER-->
                 <LinearLayout
@@ -122,7 +133,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_24ssp"
                         android:gravity="center|start"
-                        android:text="time"
                         android:textSize="@dimen/text_size_title"
                         android:textStyle="bold" />
                 </LinearLayout>
