--- a/app/src/main/res/layout-w600dp-land/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_computer_exercise.xml
@@ -73,15 +73,26 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/description_exercise"
+            <TextSwitcher
+                android:id="@+id/textSwitcher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="@dimen/_24ssp"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+            </TextSwitcher>
 
             <!--TIMER-->
             <LinearLayout
