--- a/app/src/main/res/layout-w600dp/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout-w600dp/fragment_computer_exercise.xml
@@ -85,27 +85,37 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0.6"
+                android:alpha="0.8"
                 android:background="@color/white" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="match_parent"
-
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/_8sdp"
+                android:layout_margin="20dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/description_exercise"
+                <TextSwitcher
+                    android:id="@+id/textSwitcher"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="24dp"
-                    android:layout_marginBottom="@dimen/_24ssp"
-                    android:text="frr"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+                    android:layout_marginBottom="@dimen/_24ssp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </TextSwitcher>
 
                 <!--TIMER-->
                 <LinearLayout
